--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
             <h1 class="apresentacao__conteudo__titulo"><strong 
                 class="titulo-destaque">Sobre mim</strong></h1>
             <p class="apresentacao__conteudo__texto">
-                Formação: Coding - Cruzeiro do Sul Virtual<br>
+                Formação: <span class="span__texto">Coding - Cruzeiro do Sul Virtual</span><br>
                 Cursos:<br>
-                -Fundação Bradesco:<br> Excel Básico.<br>
-                -Alura:<br> POO Java, Arquitetura de computadores, Git/GitHub, Front-End.<br>
-                -Data science academy:<br> Fundamentos de IA e Data science,<br>Python aplicado a Analise de dados e Data science.<br>
-                -Cruzeiro do Sul Virtual:<br> Felicidade e qualidade de vida.<br>
-                -Porta do Trader:<br> Trader Nivel Três.<br>
+                -Fundação Bradesco:<br><span class="span__texto"> Excel Básico.</span><br>
+                -Alura:<br><span class="span__texto"> POO Java, Arquitetura de computadores, Git/GitHub, Front-End.</span><br>
+                -Data science academy:<br><span class="span__texto"> Fundamentos de IA e Data science,<br>Python aplicado a Analise de dados e Data science.</span><br>
+                -Cruzeiro do Sul Virtual:<br><span class="span__texto"> Felicidade e qualidade de vida.</span><br>
+                -Portal do Trader:<br><span class="span__texto"> Trader Nivel Três.</span><br>
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/arthur.jpg" alt="Arthur Age">
