--- a/projetos.html
+++ b/projetos.html
@@ -26,7 +26,7 @@
                 
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/arthur.jpg" alt="Arthur Age">
+        <img class="apresentacao__imagem" src="./assets/macdMES.jpg" alt="Arthur Age">
     </main>
 
     <footer class="rodape">
