--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,7 @@
     </header>
 
     <main class="apresentacao">
-        <img class="apresentacao__imagem" src="./assets/macdMES.png" alt="Arthur Age">
+        <img class="apresentacao__imagem" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 100%; height: auto;">
     </main>
 
     <footer class="rodape">
