--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,7 @@
     </header>
 
     <main class="apresentacao">
-        <img class="apresentacao__imagem" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 250%; height: auto;">
+        <img class="apresentacao__imagem" src="./assets/macdMES.png" alt="Arthur Age" style="transform: scale(1.5);">
     </main>
 
     <footer class="rodape">
