--- a/projetos.html
+++ b/projetos.html
@@ -18,8 +18,9 @@
         </nav>
     </header>
 
-    <main class="apresentacao">
-        <img class="apresentacao__imagem" src="./assets/macdMES.png" alt="Arthur Age" style="transform: scale(2.5);">
+    <main class="apresentacaoprojeto">
+        <img class="apresentacaomacd" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 100%; height: auto;">
+
     </main>
 
     <footer class="rodape">
