--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,10 @@
     </header>
 
     <main class="apresentacaoprojeto">
-        <img class="apresentacaomacd" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 80%; height: auto;">
+        <main class="apresentacao" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <img class="apresentacaomacd" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 80%; height: auto;">
+</main>
+
 
     </main>
 
