--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 -Portal do Trader:<br><span class="span__texto"> Trader Nivel Três.</span><br>
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/arthur.jpg" alt="Arthur Age">
+        <img class="apresentacao__imagem" src="./assets/b2.png" alt="Arthur Age">
     </main>
 
     <footer class="rodape">
