--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                 -Data science academy:<br><span class="span__texto"> Fundamentos de IA e Data science,<br>Python aplicado a Analise de dados e Data science.</span><br>
                 -Cruzeiro do Sul Virtual:<br><span class="span__texto"> Felicidade e qualidade de vida.</span><br>
                 -Portal do Trader:<br><span class="span__texto"> Trader Nivel Três.</span><br>
+                -<span class="span__texto">B2 English Level.</span>
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/b2.png" alt="Arthur Age">
