--- a/projetos.html
+++ b/projetos.html
@@ -8,7 +8,15 @@
     <title>Projetos</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99696WYLSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-99696WYLSZ');
+</script>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
