--- a/about.html
+++ b/about.html
@@ -21,27 +21,30 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre o Assunto</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Links Úteis</a>
         </nav>
     </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo"><strong 
-                class="titulo-destaque">Sobre mim</strong></h1>
+            <h1 class="apresentacao__conteudo__titulo"><strong
+                class="titulo-destaque">Sobre o Assunto em Almirante Tamandaré</strong></h1>
             <p class="apresentacao__conteudo__texto">
-                Formação: <span class="span__texto">Coding - Cruzeiro do Sul Virtual</span><br>
-                Cursos:<br>
-                -Fundação Bradesco:<br><span class="span__texto"> Excel Básico.</span><br>
-                -Alura:<br><span class="span__texto"> POO Java, Arquitetura de computadores, Git/GitHub, Front-End.</span><br>
-                -Data science academy:<br><span class="span__texto"> Fundamentos de IA e Data science,<br>Python aplicado a Analise de dados e Data science.</span><br>
-                -Cruzeiro do Sul Virtual:<br><span class="span__texto"> Felicidade e qualidade de vida.</span><br>
-                -Portal do Trader:<br><span class="span__texto"> Trader Nivel Três.</span><br>
-                -B2 English Level.
+               Vamos começar com relatos de moradores do Jardim Graziela sobre a qualidade da água.
+            A água é um recurso essencial para a vida, e sua qualidade é fundamental para a saúde e o bem-estar das comunidades,
+            e os moradores relatam que os boxes do banheiro e as pias ficam com calcário depois que a água seca,
+            o que pode afetar a saúde e a qualidade de vida das pessoas, pois esse calcário será processado pelos rins, e em grandes quantidades por tempo prolongado
+            pode causar problemas renais.
+            A causa disso pode ser a presença de minerais como cálcio, calcário e magnésio na água, que se acumulam quando as rochas sáo escavadas nas empresas de mineração 
+            presentes em Almirante Tamandaré.
+            A solução para esse problema é a instalação de filtros de água, que podem remover esses minerais e melhorar a qualidade da água.
+            Além disso, é importante que as autoridades locais monitorem a qualidade da água e tomem medidas para garantir que ela atenda aos padrões de segurança e saúde. 
+            Siga para a página de Links Úteis para saber mais sobre o assunto pois há muita riqueza em um aquífero em Almirante Tamandaré, e você vai entender melhor o porquê 
+            isso está acontecendo com a água.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/b2.png" alt="Arthur Age">
+        <img class="apresentacao__imagem" src="./assets/mineradoras.png" alt="Mineradoras em Almirante Tamandaré">
     </main>
 
     <footer class="rodape">
