--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Analista de Dados</title>
+    <title>Qualidade de Água em Almirante Tamandaré</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -21,17 +21,17 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre o Assunto</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Links Úteis</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Encontre<strong 
-            class="titulo-destaque"> Soluções!
+            class="titulo-destaque"> Soluções para a saúde da sua família!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! me chamo Arthur de Souza Age, Sou Analista de dados com especialidade em Market Data <span class="span__texto">Vamos 
-                conversar?</span></p>
+            <p class="apresentacao__conteudo__texto">Olá! me chamo Arthur, Sou estudante de Data Science, <span class="span__texto">Vamos 
+                conversar um pouco sobre a qualidade da água em Almirante Tamandaré?</span></p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/arthurfamilia">
@@ -44,10 +44,10 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="assets/arthur.jpg" alt="Arthur Age">
+        <img class="apresentacao__imagem" src="assets/fotoindex.png" alt="Arthur Age">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Arthur.</p>
+        <p>Desenvolvido por Arthur, project powered by Google Analytics.</p>
     </footer>
 </body>
 
