--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos</title>
+    <title>Links Úteis</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -21,17 +21,30 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre o Assunto</a>
+            <a class="cabecalho__menu__link" href="projetos.html">Links Úteis</a>
         </nav>
     </header>
 
     <main class="apresentacaoprojeto">
-        <main class="apresentacao" style="display: flex; justify-content: center; align-items: center; height: auto;">
-    <img class="apresentacaomacd" src="./assets/macdMES.png" alt="Arthur Age" style="max-width: 100%; height: auto;">
-</main>
+        <section class="apresentacao">
+            <div class="apresentacao__conteudo">
+                <h1 class="apresentacao__conteudo__titulo">Links Úteis</h1>
+                <div class="apresentacao__conteudo__texto">
+                    <p><a class="apresentacao__links__link" href="https://www.iat.pr.gov.br/sites/agua-terra/arquivos_restritos/files/documento/2020-07/geografar_a_infuencia_do_carste_em_at.pdf">https://www.iat.pr.gov.br/sites/agua-terra/arquivos_restritos/files/documento/2020-07/geografar_a_infuencia_do_carste_em_at.pdf</a></p></br>
 
+                    <p><a class="apresentacao__links__link" href="https://pt.wikipedia.org/wiki/Aqu%C3%ADfero_Karst">https://pt.wikipedia.org/wiki/Aqu%C3%ADfero_Karst</a></p></br>
 
+                    <p><a class="apresentacao__links__link" href="https://revistas.ufpr.br/geografar/article/view/6838">https://revistas.ufpr.br/geografar/article/view/6838</a></p></br>
+
+                    <p><a class="apresentacao__links__link" href="https://www.researchgate.net/figure/Figura-4-Area-de-Influencia-do-Aqueifero-Karst-Municipio-de-Almirante-Tamandare-FONTE_fig1_242407865">https://www.researchgate.net/figure/Figura-4-Area-de-Influencia-do-Aqueifero-Karst-Municipio-de-Almirante-Tamandare-FONTE_fig1_242407865</a></p></br>
+
+                    <p><a class="apresentacao__links__link" href="https://www.aguapress.com.br/b/aquifero-carste-almirante-tamandare/">https://www.aguapress.com.br/b/aquifero-carste-almirante-tamandare/</a></p></br>
+
+                    <p><a class="apresentacao__links__link" href="http://www.diaadiaeducacao.pr.gov.br/portals/cadernospde/pdebusca/producoes_pde/2013/2013_ufpr_geo_artigo_jose_maria_von_kruger.pdf">http://www.diaadiaeducacao.pr.gov.br/portals/cadernospde/pdebusca/producoes_pde/2013/2013_ufpr_geo_artigo_jose_maria_von_kruger.pdf</a></p></br>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="rodape">
